# SplendorBot

./: BUILD_WINDOWS.md  CMakeLists.txt  Makefile  RL_imp.txt  SplendorGame.cpp  claude.md  quick_test.npz  requirements.txt
Game/: main.cpp
RL/: FIXED.md  QUICK_REFERENCE.md  README.md  SUMMARY.md  USAGE_GUIDE.md  bc_data.npz  debug_mask.py  env_wrapper.py  evaluate.py  evaluate_debug.py  generate_dataset.py  heuristic_agent.py  main.py  policy_network.py  recreate_bug.py  requirements.txt  test_crash_location.py  test_csv_directly.py  test_data.npz  test_double_env.py  test_double_env2.py  test_env_simple.py  test_env_wrapper.py  test_eval_full.py  test_eval_scenario.py  test_heuristic.py  test_minimal_import.py  test_simple.py  test_structure.py  test_with_torch.py  train_bc.py  train_ppo.py
cpp/: SplendorGame.cpp
data/: cards.csv  nobles.csv
include/: constants.h  csv_parser.h  game_initializer.h  game_state.h  move_executor.h  move_generator.h  player_state.h  state_serializer.h  types.h
python/: script.py
src/: bindings.cpp  csv_parser.cpp  game_initializer.cpp  game_state.cpp  move_executor.cpp  move_generator.cpp  player_state.cpp  state_serializer.cpp  types.cpp
